added header component to hompage, shop and contact

--- a/src/component/header/header.style.scss
+++ b/src/component/header/header.style.scss
@@ -4,6 +4,7 @@
   display: flex;
   justify-content: space-between;
   margin-bottom: 25px;
+  background-color: #76ec3f;
 
   .logo-container {
     height: 100%;
