--- a/src/pages/collection/collectionPage.style.scss
+++ b/src/pages/collection/collectionPage.style.scss
@@ -3,6 +3,9 @@
   flex-direction: column;
   width: 100%;
   justify-content: center;
+  @media screen and (max-width: 800px) {
+    align-items: center;
+  }
 
   .title {
     font-size: 38px;
@@ -15,7 +18,7 @@
     grid-gap: 10px;
     @media screen and (max-width: 800px) {
       grid-template-columns: 1fr 1fr;
-      grid-gap: 5px;
+      grid-gap: 15px;
     }
 
     & .collection-item {
